// protoc --proto_path=. --micro_out=. --go_out=. grpc.proto
syntax = "proto3";

import "google/protobuf/wrappers.proto";

package grpc;

option go_package="./;proto";

service Source {
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Write(WriteRequest) returns (google.protobuf.BoolValue) {}
  rpc Watch(WatchRequest) returns (stream WatchResponse) {}
}

message ChangeSet {
  bytes data = 1;
  string checksum = 2;
  string format = 3;
  string source = 4;
  int64 timestamp = 5;
}

message ReadRequest {
  string path = 1;
}

message ReadResponse {
  ChangeSet change_set = 1;
}

message WriteRequest {
  string path = 1;
  ChangeSet change_set = 2;
}

message WatchRequest {
  string path = 1;
}

message WatchResponse {
  ChangeSet change_set = 1;
}